--- a/javascript_tko/js_game_udemy/index.html
+++ b/javascript_tko/js_game_udemy/index.html
@@ -9,6 +9,11 @@
   <script src="main.js"></script>
 </head>
 <body>
-  
+  <canvas id="myCanvas">
+
+  </canvas>
+  <script src="script.js">
+
+  </script>
 </body>
 </html>
