--- a/javascript_tko/js_game_udemy/index.html
+++ b/javascript_tko/js_game_udemy/index.html
@@ -4,16 +4,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Breakout Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <link rel="stylesheet" typXe="text/css" media="screen" href="main.css" />
 </head>
 <body>
-  <canvas id="myCanvas">
-
+  <canvas id="myCanvas" width="480" height="320">
+    
   </canvas>
-  <script src="script.js">
-
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
