Update moth game

--- a/javascript_tko/js_game_udemy/index.html
+++ b/javascript_tko/js_game_udemy/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Breakout Game</title>
+  <title>I love lamp</title>
   <link rel="stylesheet" typXe="text/css" media="screen" href="main.css" />
 </head>
 <body>
-  <canvas id="myCanvas" width="480" height="320">
+  <canvas id="myCanvas" width="480" height="500">
     
   </canvas>
   <script src="main.js"></script>
